Clean up of the results CSS and the refinement options.
--HG--
extra : convert_revision : svn%3A01e103ed-f575-20b1-d296-6440ccab0075/GSSearch/trunk%402050

--- a/browser/stylesheets/search.css
+++ b/browser/stylesheets/search.css
@@ -1,5 +1,16 @@
+.keywords {
+  margin: 0.5em 0px 0.5em 0px;
+}
 .keywords li {
   list-style: none;
   display: inline;
   margin-right: 10px;
 }
+
+.refine {
+  margin: 0px 0px 1em 0px;
+}
+.showrefine a {
+  display: block;
+}
+
