Clean up for the first public show and tell.
--HG--
extra : convert_revision : svn%3A01e103ed-f575-20b1-d296-6440ccab0075/GSSearch/trunk%402055

--- a/browser/stylesheets/search.css
+++ b/browser/stylesheets/search.css
@@ -1,7 +1,7 @@
 .keywords {
   margin: 0.5em 0px 0.5em 0px;
 }
-.keywords li {
+.keywords li, .navigation li {
   list-style: none;
   display: inline;
   margin-right: 10px;
@@ -13,4 +13,3 @@
 .showrefine a {
   display: block;
 }
-
